--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -623,12 +623,12 @@
 
   .sponsor-logo-container {
     border-radius: 24px;
-    border: 14px dashed #BEA8FF;
+    border: 14px dashed #97A1FF;
     padding: 20px;
-    box-shadow:   -15px 0 0 0 #BEA8FF,
-                 15px 0 0 0 #BEA8FF,
-                 0 -15px 0 0 #BEA8FF,
-                 0 15px 0 0 #BEA8FF;
+    box-shadow:   -15px 0 0 0 #97A1FF,
+                 15px 0 0 0 #97A1FF,
+                 0 -15px 0 0 #97A1FF,
+                 0 15px 0 0 #97A1FF;
   }
 
   .sponsor-logo-container-inner {
@@ -668,7 +668,7 @@
   }
 
   .footer-content a {
-    @apply text-sand;
+    color: #F2F3FF;
     font-weight: 500;
     text-decoration: none;
   }
@@ -678,11 +678,11 @@
   }
 
   .footer-content p {
-    @apply text-sand;
+    color: #F2F3FF;
   }
 
   .footer-content h1 {
-    @apply text-sand;
+    color: #F2F3FF;
     font-weight: 600;
     font-size: 50px;
     line-height: 45px;
